--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
             </ul>
         </div>
         <div class="banner">
-            <div class="my-image">
-               <img src="./images/2023_03_30_14_46_IMG_1687.JPG" alt=""> 
+            <div class="img-1">
+               <img class="my-image" src="./images/2023_03_30_14_46_IMG_1687.JPG" alt=""> 
             </div>
             <div class="banner-text">
                 <div class="banner-name">
                     <div class="hi"> ---HI---</div>
-                    <div class="name"> My name is <div class="adedoyin">Adeyemo Adedoyin</div></div>
-                    <div class="field"> I'm a Frontend Developer, Content Creator, Creative Director Of Mawu's Aura.</div>
-                    <div class="see-more"> see more about me below ...</div>
+                    <div class="all-names">
+                        <div class="name"> 
+                            <div class="name-is"> My name is </div>
+                            <div class="adedoyin">Adeyemo Adedoyin</div> 
+                            
+                        </div>
+                        <div class="field"> I'm a Frontend Developer, Content Creator, Creative Director Of Mawu's Aura.</div>
+                        <div class="see-more"> See more about me below ...</div>
+                    </div>
                 </div>
             </div>
         </div>
