--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="general">
         <div class="header">
             <div class="header-1"></div>
-             <button id="link"> <a href="https://www.instagram.com/mawus_glam/"><i class='bx bxl-instagram'></i></a> </button> 
-        </div>
-        <div class="nav">
-            <ul class="nav-links">
-                <li> <a href="">About</a> </li>
-                <li> <a href="">Projects</a> </li>
-                <li> <a href="">Contacts</a> </li>
-            </ul>
+            <nav>
+                <ul class="nav-links">
+                    <li> <a href="">About</a> </li>
+                    <li> <a href="">Projects</a> </li>
+                    <li> <a href="">Contacts</a> </li>
+                </ul>
+            </nav>
+            <button class="link"> <a href="https://www.instagram.com/mawus_glam/"><i class='bx bxl-instagram'></i></a></button> 
         </div>
         <div class="banner">
             <div class="img-1">
@@ -42,6 +42,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 </body>
 </html>
