--- a/index.html
+++ b/index.html
@@ -24,25 +24,60 @@
             <button class="link"> <a href="https://www.instagram.com/mawus_glam/"><i class='bx bxl-instagram'></i></a></button> 
         </div>
         <div class="banner">
-            <div class="img-1">
-               <img class="my-image" src="./images/2023_03_30_14_46_IMG_1687.JPG" alt=""> 
-            </div>
+            <div> <img src="./images/2023_03_30_14_46_IMG_1687.JPG" alt="" class="ban-img"></div>
             <div class="banner-text">
-                <div class="banner-name">
-                    <div class="hi"> ---HI---</div>
-                    <div class="all-names">
-                        <div class="name"> 
-                            <div class="name-is"> My name is </div>
-                            <div class="adedoyin">Adeyemo Adedoyin</div> 
-                            
-                        </div>
-                        <div class="field"> I'm a Frontend Developer, Content Creator, Creative Director Of Mawu's Aura.</div>
-                        <div class="see-more"> See more about me below ...</div>
-                    </div>
+                <div class="hi"> ---Hi---</div>
+                <div class="ade-hi">
+                    <div class="hi">  My name is</div>
+                    <div class="ade">Adeyemo Adedoyin.</div>
+                </div>
+                <div class="hi">I'm a Frontend Developer, Content Creator, Creative Director Of Mawu's Aura.</div>
+                <div class="hi"> 
+                    I have learning Experience of 6months as a Developer from AXIA AFRICA ACADEMY.
+                </div>
+                <div class="hi"> As a Jnr. Devloper i can use HTML, CSS, VSCODE, TAILWIND, GITHUB, NETLIFY perfectly and currenlt working on my JAVASRIPT.</div>
+                <div class="hi"> See more about me below ...</div>
+            </div>
+        </div>
+        <div class="line"> Projects</div>
+        <div class="project">
+            <div class="saas">
+                <div class="saas-1"> 
+                    <div class="saas-text">SAAS DESIGN</div>
+                    <img src="./images/Screenshot 2023-06-28 144734.png" alt="" class="saas-img">
+                </div>
+                <div class="saas-links">
+                    <button class="saas-git"> <a href="https://github.com/adedoyinmawusaura/saas-website.git?authuser=0"> GITHUB </a></button>
+                    <button class="saas-netlify"> <a href="https://dynamic-rabanadas-fd8172.netlify.app/?authuser=0"> NETLIFY </a></button>
+                </div>
+            </div>
+            <div class="saas">
+                <div class="saas-1"> 
+                    <div class="saas-text">FURNITURE DESIGN</div>
+                    <img src="./images/Screenshot 2023-06-28 143721.png" alt="" class="saas-img">
+                </div>
+                <div class="saas-links">
+                    <button class="saas-git"> <a href="https://github.com/adedoyinmawusaura/furniture-design-1.git"> GITHUB </a></button>
+                    <button class="saas-netlify"> <a href="https://funny-medovik-ba3db3.netlify.app/"> NETLIFY </a></button>
                 </div>
             </div>
         </div>
-        
+        <div class="contacts">
+            <div class="contact-details">
+                <div class="get">Get in Touch </div>
+                <div class="email"> Lastborndoyin01@gmail.com </div>
+                <div class="social-links">
+                    <i class='bx bxl-twitter'></i> @mawusaura
+                    <i class='bx bxl-whatsapp'></i> 08037331622
+                    <i class='bx bx-phone' ></i> 08037331622
+                </div>
+            </div>
+            <div class="line-1"></div>
+            <div class="footer">
+               <div class="ademawus"> adedoyinmawusaura</div>
+               <div class="date">@2023</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
